--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,15 @@
 <html ng-app="listaTelefonica">
 <head>
 	<title>Lista Telefonica</title>
-	<script src="lib/angular/angular.js"></script>
-	<link rel="stylesheet" type="text/css" href="lib/bootstrap/bootstrap.css">
+	<script src="../lib/angular/angular.js"></script>
+	<link rel="stylesheet" type="text/css" href="../lib/bootstrap/bootstrap.css">
 	<style>
 		.jumbotron{
 			width: 400;
+			margin-top: 20px;
 			text-align: center;
+			margin-left: auto;
+			margin-right: auto;
 	}
 	</style>
 	<script>
