--- a/src/index.html
+++ b/src/index.html
@@ -5,23 +5,57 @@
 	<link rel="stylesheet" type="text/css" href="../lib/bootstrap/bootstrap.css">
 	<style>
 		.jumbotron{
-			width: 400;
-			margin-top: 20px;
+			width: 400px;
 			text-align: center;
+			margin-top: 20px;
 			margin-left: auto;
 			margin-right: auto;
+			padding: 10px;
 	}
+		.table{
+			margin-top: 20px;
+		}
+		.form-control{
+			margin-bottom: 5px;
+		}
+		.button{
+
+		}
 	</style>
 	<script>
 		angular.module("listaTelefonica", []);
 		angular.module("listaTelefonica").controller("listaTelefonicaController", function ($scope) {
 			$scope.app="Lista Telefonica";
-		})
+			$scope.contatos=[
+				{nome: "Andre", telefone: "(87) 9. 9167 - 8707"},
+				{nome: "Ana", telefone: "(81) 9. 9945 - 9012"},
+				{nome: "Diego", telefone: "(81) 9. 9145 - 5664"}
+			]
+
+			$scope.adicionarContato = function adicionarContato(contato) {
+				$scope.contatos.push(angular.copy(contato));
+				delete $scope.contato;
+			};
+		});
 	</script>
 </head>
 <body ng-controller="listaTelefonicaController">
 	<div class="jumbotron">
-		<h4 ng-bind="app"></h4>
+		<h3>{{app}}</h3>
+		<table class="table table-striped">
+			<tr>
+				<th>Nome</th>
+				<th>Telefone</th>
+			</tr>
+			<tr ng-repeat="contato in contatos">
+				<td>{{contato.nome}}</td>
+				<td>{{contato.telefone}}</td>
+			</tr>
+		</table>
+		<hr/>
+		<input class="form-control" type="text" ng-model="contato.nome" placeholder="Nome" />
+		<input class="form-control" type="text" ng-model="contato.telefone" placeholder="Telefone">
+		<button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)">Adicionar contato</button>
 	</div>
 </body>
 </html>
