--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
 		<hr/>
 		<input class="form-control" type="text" ng-model="contato.nome" placeholder="Nome" />
 		<input class="form-control" type="text" ng-model="contato.telefone" placeholder="Telefone">
-		<button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)">Adicionar contato</button>
+		<button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)" ng-disabled="!contato.nome || !contato.telefone">Adicionar contato</button>
 	</div>
 </body>
 </html>
