Implementacao da selecao por check box, destacando os selecionados

--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,11 @@
 		.form-control{
 			margin-bottom: 5px;
 		}
-		.button{
-
+		.selecionado{
+			background-color: #4682B4;
+		}
+		.negrito{
+			font-weight: bold;
 		}
 	</style>
 	<script>
@@ -30,31 +33,48 @@
 				{nome: "Andre", telefone: "(87) 9. 9167 - 8707"},
 				{nome: "Ana", telefone: "(81) 9. 9945 - 9012"},
 				{nome: "Diego", telefone: "(81) 9. 9145 - 5664"}
-			]
+			];
+			$scope.operadoras=[
+				{nome: "Oi", codigo: 14, categoria: "Celular"},
+				{nome: "Tim", codigo: 41, categoria: "Celular"},
+				{nome: "Claro", contato: 21, categoria: "Celular"},
+				{nome: "Vivo", codigo:15, categoria: "Celular"},
+				{nome: "GVT", codigo: 20, categoria: "Fixo"},
+				{nome: "Embratel", codigo: 43, categoria: "Fixo"}
+			];
 
 			$scope.adicionarContato = function adicionarContato(contato) {
 				$scope.contatos.push(angular.copy(contato));
 				delete $scope.contato;
 			};
+
 		});
 	</script>
 </head>
 <body ng-controller="listaTelefonicaController">
 	<div class="jumbotron">
 		<h3>{{app}}</h3>
-		<table class="table table-striped">
+		{{contatos}}
+		<table class="table">
 			<tr>
+				<th></th>
 				<th>Nome</th>
 				<th>Telefone</th>
+				<th>Operadora</th>
 			</tr>
-			<tr ng-repeat="contato in contatos">
+			<tr ng-class="{'selecionado negrito': contato.selecionado}" ng-repeat="contato in contatos">
+				<td><input type="checkbox" ng-model="contato.selecionado"/></td>
 				<td>{{contato.nome}}</td>
 				<td>{{contato.telefone}}</td>
+				<td>{{contato.operadora.nome}}</td>
 			</tr>
 		</table>
 		<hr/>
 		<input class="form-control" type="text" ng-model="contato.nome" placeholder="Nome" />
 		<input class="form-control" type="text" ng-model="contato.telefone" placeholder="Telefone">
+		<select class="form-control" ng-model="contato.operadora" ng-options="operadora.nome group by operadora.categoria for operadora in operadoras">
+			<option value="">Selecione uma operadora</option>
+		</select>
 		<button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)" ng-disabled="!contato.nome || !contato.telefone">Adicionar contato</button>
 	</div>
 </body>
