Ocultação da tabela, caso vazia

--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,9 @@
 		angular.module("listaTelefonica").controller("listaTelefonicaController", function ($scope) {
 			$scope.app="Lista Telefonica";
 			$scope.contatos=[
-				{nome: "Andre", telefone: "(87) 9. 9167 - 8707"},
-				{nome: "Ana", telefone: "(81) 9. 9945 - 9012"},
-				{nome: "Diego", telefone: "(81) 9. 9145 - 5664"}
+				{nome: "Andre", telefone: "(87) 9. 9167 - 8707", cor: "blue"},
+				{nome: "Ana", telefone: "(81) 9. 9945 - 9012", cor: "yellow"},
+				{nome: "Diego", telefone: "(81) 9. 9145 - 5664", cor: "red"}
 			];
 			$scope.operadoras=[
 				{nome: "Oi", codigo: 14, categoria: "Celular"},
@@ -64,18 +64,20 @@
 <body ng-controller="listaTelefonicaController">
 	<div class="jumbotron">
 		<h3>{{app}}</h3>
-		<table class="table">
+		<table ng-show="contatos.length > 0" class="table">
 			<tr>
 				<th></th>
 				<th>Nome</th>
 				<th>Telefone</th>
 				<th>Operadora</th>
+				<th></th>
 			</tr>
 			<tr ng-class="{'selecionado negrito': contato.selecionado}" ng-repeat="contato in contatos">
 				<td><input type="checkbox" ng-model="contato.selecionado"/></td>
 				<td>{{contato.nome}}</td>
 				<td>{{contato.telefone}}</td>
 				<td>{{contato.operadora.nome}}</td>
+				<td><div style="width: 15px; height: 15px;" ng-style="{'background-color':contato.cor}"></div></td>
 			</tr>
 		</table>
 		<hr/>
@@ -85,7 +87,7 @@
 			<option value="">Selecione uma operadora</option>
 		</select>
 		<button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)" ng-disabled="!contato.nome || !contato.telefone">Adicionar contato</button>
-		<button class="btn btn-danger btn-block" ng-click="removerContatos(contatos)" ng-disabled="!isContatoSelecionado(contatos)">Remover contatos</button>
+		<button class="btn btn-danger btn-block" ng-click="removerContatos(contatos)" ng-show="isContatoSelecionado(contatos)">Remover contatos</button>
 	</div>
 </body>
 </html>
