--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,5 @@
 <html ng-app="listaTelefonica">
+<meta charset="UTF-8">
 <head>
 	<title>Lista Telefonica</title>
 	<script src="../lib/angular/angular.js"></script>
@@ -81,12 +82,16 @@
 			</tr>
 		</table>
 		<hr/>
-		<input class="form-control" type="text" ng-model="contato.nome" placeholder="Nome" />
-		<input class="form-control" type="text" ng-model="contato.telefone" placeholder="Telefone">
+		É válido : {{contatoForm.$valid}}<br/>
+		Inválido : {{contatoForm.$invalid}}<br/>
+		<form name="contatoForm">
+		<input class="form-control" type="text" ng-model="contato.nome" placeholder="Nome" ng-required="true"/>
+		<input class="form-control" type="text" ng-model="contato.telefone" placeholder="Telefone" ng-required="true">
 		<select class="form-control" ng-model="contato.operadora" ng-options="operadora.nome group by operadora.categoria for operadora in operadoras">
 			<option value="">Selecione uma operadora</option>
 		</select>
-		<button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)" ng-disabled="!contato.nome || !contato.telefone">Adicionar contato</button>
+		</form>
+		<button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)" ng-disabled="contatoForm.$invalid">Adicionar contato</button>
 		<button class="btn btn-danger btn-block" ng-click="removerContatos(contatos)" ng-if="isContatoSelecionado(contatos)">Remover contatos</button>
 	</div>
 	<div ng-include="'rodape.html'"></div>
