Exibicao de mensagem + validacao de campos

--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,7 @@
 			$scope.adicionarContato = function (contato) {
 				$scope.contatos.push(angular.copy(contato));
 				delete $scope.contato;
+				$scope.contatoForm.$setPristine();
 			};
 			$scope.removerContatos = function (contatos) {
 				$scope.contatos = contatos.filter(function(contato) {
@@ -82,15 +83,19 @@
 			</tr>
 		</table>
 		<hr/>
-		É válido : {{contatoForm.$valid}}<br/>
-		Inválido : {{contatoForm.$invalid}}<br/>
 		<form name="contatoForm">
-		<input class="form-control" type="text" ng-model="contato.nome" placeholder="Nome" ng-required="true"/>
-		<input class="form-control" type="text" ng-model="contato.telefone" placeholder="Telefone" ng-required="true">
+		<input class="form-control" type="text" ng-model="contato.nome" name="nome" placeholder="Nome" ng-required="true"/>
+		<input class="form-control" type="text" ng-model="contato.telefone" name="telefone" placeholder="Telefone" ng-required="true">
 		<select class="form-control" ng-model="contato.operadora" ng-options="operadora.nome group by operadora.categoria for operadora in operadoras">
 			<option value="">Selecione uma operadora</option>
 		</select>
 		</form>
+		<div ng-show="contatoForm.nome.$invalid && contatoForm.nome.$dirty" class="alert alert-danger">
+			Por favor, preencha o campo Nome!
+		</div>
+		<div ng-show="contatoForm.telefone.$invalid && contatoForm.telefone.$dirty" class="alert alert-danger">
+			Por favor, preencha o campo Telefone!
+		</div>
 		<button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)" ng-disabled="contatoForm.$invalid">Adicionar contato</button>
 		<button class="btn btn-danger btn-block" ng-click="removerContatos(contatos)" ng-if="isContatoSelecionado(contatos)">Remover contatos</button>
 	</div>
