--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Lista Telefonica</title>
 	<script src="../lib/angular/angular.js"></script>
+	<script src="../lib/angular/angular-messages.js"></script>
 	<link rel="stylesheet" type="text/css" href="../lib/bootstrap/bootstrap.css">
 	<style>
 		.jumbotron{
@@ -27,7 +28,7 @@
 		}
 	</style>
 	<script>
-		angular.module("listaTelefonica", []);
+		angular.module("listaTelefonica", ["ngMessages"]);
 		angular.module("listaTelefonica").controller("listaTelefonicaController", function ($scope) {
 			$scope.app="Lista Telefonica";
 			$scope.contatos=[
@@ -85,19 +86,24 @@
 		<hr/>
 		<form name="contatoForm">
 		<input class="form-control" type="text" ng-model="contato.nome" name="nome" placeholder="Nome" ng-required="true" ng-minlength="10"/>
-		<input class="form-control" type="text" ng-model="contato.telefone" name="telefone" placeholder="Telefone" ng-required="true" ng-minlength="11">
+		<input class="form-control" type="text" ng-model="contato.telefone" name="telefone" placeholder="Telefone" ng-required="true" ng-pattern="/^\d{4,5}-\d{4}$/">
 		<select class="form-control" ng-model="contato.operadora" ng-options="operadora.nome group by operadora.categoria for operadora in operadoras">
 			<option value="">Selecione uma operadora</option>
 		</select>
 		</form>
-		<div ng-show="contatoForm.nome.$error.required && contatoForm.nome.$dirty" class="alert alert-danger">
+		<div ng-show="contatoForm.nome.$dirty" ng-messages="contatoForm.nome.$error">
+		<div ng-message="required" class="alert alert-danger">
 			Por favor, preencha o campo Nome!
 		</div>
-		<div ng-show="contatoForm.nome.$error.minlength" class="alert alert-danger">
+		<div ng-message="minlength" class="alert alert-danger">
 			O campo nome deve ter no mínimo 10 caracters!
 		</div>
-		<div ng-show="contatoForm.telefone.$invalid && contatoForm.telefone.$dirty" class="alert alert-danger">
+		</div>
+		<div ng-show="contatoForm.telefone.$error.required && contatoForm.telefone.$dirty" class="alert alert-danger">
 			Por favor, preencha o campo Telefone!
+		</div>
+		<div ng-show="contatoForm.telefone.$error.pattern" class="alert alert-danger">
+			O campo telefone deve seguir o seguinte modelo: DDDDD-DDDD!
 		</div>
 		<button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)" ng-disabled="contatoForm.$invalid">Adicionar contato</button>
 		<button class="btn btn-danger btn-block" ng-click="removerContatos(contatos)" ng-if="isContatoSelecionado(contatos)">Remover contatos</button>
