Aplicando filtros - upper e lower case

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,7 @@
 <html ng-app="listaTelefonica">
-<meta charset="UTF-8">
 <head>
+	<meta charset="UTF-8">
 	<title>Lista Telefonica</title>
-	<script src="../lib/angular/angular.js"></script>
-	<script src="../lib/angular/angular-messages.js"></script>
 	<link rel="stylesheet" type="text/css" href="../lib/bootstrap/bootstrap.css">
 	<style>
 		.jumbotron{
@@ -13,7 +11,10 @@
 			margin-left: auto;
 			margin-right: auto;
 			padding: 10px;
-	}
+		}
+		h3 {
+			margin-bottom: 30px;
+		}
 		.table{
 			margin-top: 20px;
 		}
@@ -21,20 +22,25 @@
 			margin-bottom: 5px;
 		}
 		.selecionado{
-			background-color: #4682B4;
+			background-color: yellow;
 		}
 		.negrito{
 			font-weight: bold;
 		}
+		hr{
+			border-color: #999;
+		}
 	</style>
+	<script src="../lib/angular/angular.js"></script>
+	<script src="../lib/angular/angular-messages.js"></script>
 	<script>
 		angular.module("listaTelefonica", ["ngMessages"]);
 		angular.module("listaTelefonica").controller("listaTelefonicaController", function ($scope) {
 			$scope.app="Lista Telefonica";
 			$scope.contatos=[
-				{nome: "Andre", telefone: "(87) 9. 9167 - 8707", cor: "blue"},
-				{nome: "Ana", telefone: "(81) 9. 9945 - 9012", cor: "yellow"},
-				{nome: "Diego", telefone: "(81) 9. 9145 - 5664", cor: "red"}
+				{nome: "Andre", telefone: "(87) 9. 9167 - 8707", operadora: {nome: "Oi", codigo: 14, categoria: "Celular"}},
+				{nome: "Ana", telefone: "(81) 9. 9945 - 9012", operadora: {nome: "Tim", codigo: 41, categoria: "Celular"}},
+				{nome: "Diego", telefone: "(81) 9. 9145 - 5664", operadora: {nome: "Embratel", codigo: 43, categoria: "Fixo"}}
 			];
 			$scope.operadoras=[
 				{nome: "Oi", codigo: 14, categoria: "Celular"},
@@ -67,20 +73,18 @@
 <body ng-controller="listaTelefonicaController">
 	<div class="jumbotron">
 		<h3>{{app}}</h3>
-		<table ng-show="contatos.length > 0" class="table">
+		<table ng-show="contatos.length > 0" class="table table-striped">
 			<tr>
 				<th></th>
 				<th>Nome</th>
 				<th>Telefone</th>
 				<th>Operadora</th>
-				<th></th>
 			</tr>
 			<tr ng-class="{'selecionado negrito': contato.selecionado}" ng-repeat="contato in contatos">
 				<td><input type="checkbox" ng-model="contato.selecionado"/></td>
-				<td>{{contato.nome}}</td>
+				<td>{{contato.nome | uppercase}}</td>
 				<td>{{contato.telefone}}</td>
-				<td>{{contato.operadora.nome}}</td>
-				<td><div style="width: 15px; height: 15px;" ng-style="{'background-color':contato.cor}"></div></td>
+				<td>{{contato.operadora.nome | lowercase}}</td>
 			</tr>
 		</table>
 		<hr/>
